tests/gabc-dump/should-fail/bad-open-brackets.gabc
name: bad open brackets;
%%
(c4) g(g) g(g[[[[)
